Fix admin login alignment

--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -1,1 +1,24 @@
 
+body.smartcms-admin-auth {
+  min-height: 100vh;
+}
+
+body.smartcms-admin-auth main.container {
+  max-width: 480px;
+  justify-content: center;
+  padding-right: 16px;
+  padding-left: 16px;
+}
+
+body.smartcms-admin-auth main.container > .row {
+  width: 100%;
+  margin-right: 0;
+  margin-left: 0;
+}
+
+body.smartcms-admin-auth main.container > .row > [class*="col-"] {
+  width: 100%;
+  max-width: 100%;
+  padding-right: 0;
+  padding-left: 0;
+}
